# kerrik

./: .eslintrc.json  .gitignore  LICENSE  README.md  package.json  pyproject.toml  tox.ini  tsconfig.json
kerrik/: __main__.py  bot.py
kerrik/exts/: help.py  random.py
src/: bot.ts  index.ts
src/commands/: bs.ts  upSince.ts
src/events/: ready.ts  speed.ts
src/handlers/: commands.ts  events.ts
