[tool.poetry]
name = "kerrik"
version = "1.0.0"
description = "A bot that does/says random shit for guilds I like."
authors = ["Sham <thesham@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eludris-py = {git = "https://github.com/teaishealthy/eludris.py"}
taskipy = "^1.10.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
